--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,26 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.firebase.env
 
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+
+# TypeScript
+./lib
 
 # testing
 /coverage
 
 # production
 /build
+
+# log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.*.swp
 
 # misc
 .DS_Store
@@ -18,6 +29,3 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
