--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,9 @@ services:
     image: node:14.9.0-alpine3.10
     container_name: node
     volumes:
-      - ./node/app:/app
+      - .:/app
     tty: true
     working_dir: /app
     ports:
       - 3000:3000
+    command: npm start
