--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@fullcalendar/core": "^5.3.1",
     "@fullcalendar/daygrid": "^5.3.2",
-    "@fullcalendar/react": "^5.3.1",
     "@fullcalendar/interaction": "^5.3.1",
+    "@fullcalendar/react": "^5.3.1",
     "@types/jest": "26.0.13",
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.20.0",
     "eslint": "^6.8.0",
     "firebase": "^7.9.0",
     "husky": "^3.1.0",
@@ -28,8 +29,8 @@
     "redux-saga": "^1.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
-    "typescript": "^4.0.2",
-    "axios": "^0.20.0"
+    "styled-components": "^5.2.0",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
